updated main and run method in app.java according to geektrust input

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "request": "launch",
             "mainClass": "com.geektrust.backend.App",
             "projectName": "backend",
-            "args": "INPUT_FILE=input.txt"
+            "args": "input.txt"
         },
         {
             "type": "java",
